--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                 <div class="p-10 border-r border-b border-brandDark card-hover">
                     <i class="fas fa-map-marked-alt text-4xl text-brandBlue mb-6"></i>
                     <h3 class="text-lg uppercase mb-4 font-bold">Local Offices</h3>
-                    <p class="text-sm text-gray-500 leading-relaxed">Warehouses in Bodden Town and George Town for
+                    <p class="text-sm text-gray-500 leading-relaxed">Offices in Bodden Town and George Town for
                         lightning-fast response times.</p>
                 </div>
                 <div class="p-10 border-b border-brandDark card-hover">
