--- a/index.html
+++ b/index.html
@@ -771,9 +771,10 @@
                 </div>
                 <div class="service-card bg-white p-6 rounded-2xl shadow-sm border border-brandDark"
                     onclick="openModal('Painting', 'paint.jpeg')">
-                    <i class="fas fa-paint-brush icon text-gary-500 text-3xl mb-4"></i>
-                    <h3 class="text-xl font-bold mb-2">Painting</h3>
-                    <p class="text-gray-500">Interior and exterior professional painting.</p>
+                    <i class="fas fa-broom icon text-gray-500 text-3xl mb-4"></i>
+
+                    <h3 class="text-xl font-bold mb-2">Roof cleaning</h3>
+                    <p class="text-gray-500">Deep cleaning of roofs.</p>
                     <a href="#" class="flex items-center text-sm font-bold text-gray-400">
                         <br>Click to See our work
                     </a>
@@ -1422,3 +1423,4 @@ window.setFilter = (filter) => {
 </body>
 
 </html>
+
