--- a/index.html
+++ b/index.html
@@ -742,7 +742,6 @@
                         <br>Click to See our work
                     </a>
                 </div>
-            
                 <div class="service-card bg-white p-6 rounded-2xl shadow-sm border border-brandDark"
                     onclick="openModal('Pressure Washing', 'pressue.jpeg')">
                     <i class="fas fa-faucet-drip text-blue-400 text-3xl mb-4"></i>
@@ -762,11 +761,10 @@
                     </a>
                 </div>
                 <div class="service-card bg-white p-6 rounded-2xl shadow-sm border border-brandDark"
-                    onclick="openModal('Painting', 'paint.jpeg')">
-                    <i class="fas fa-broom icon text-gray-500 text-3xl mb-4"></i>
-
-                    <h3 class="text-xl font-bold mb-2">Roof cleaning</h3>
-                    <p class="text-gray-500">Deep cleaning of roofs.</p>
+                    onclick="openModal('Roof Cleaning', 'paint.jpeg')">
+                    <i class="fas fa-broom icon text-[brown] text-3xl mb-4"></i>
+                    <h3 class="text-xl font-bold mb-2">Roof Cleaning</h3>
+                    <p class="text-gray-500">Deep cleaning for your roofs.</p>
                     <a href="#" class="flex items-center text-sm font-bold text-gray-400">
                         <br>Click to See our work
                     </a>
@@ -819,7 +817,7 @@
                     </a>
                 </div>
                 <div class="service-card bg-white p-6 rounded-2xl shadow-sm border border-brandDark"
-                    onclick="openModal('General Labor', 'labor.jpeg')">
+                    onclick="openModal('General Labor', 'gl.jpeg')">
                     <i class="fas fa-hard-hat text-yellow-500 text-3xl mb-4"></i>
                     <h3 class="text-xl font-bold mb-2">General Laborer</h3>
                     <p class="text-gray-500">Reliable help for any heavy-duty task.</p>
@@ -1415,5 +1413,3 @@ window.setFilter = (filter) => {
 </body>
 
 </html>
-
-
