--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@
                     </a>
                 </div>
                 <div class="service-card bg-white p-6 rounded-2xl shadow-sm border border-brandDark"
-                    onclick="openModal('General Labor', 'gl.jpeg')">
+                    onclick="openModal('General Labor', 'gle.jpeg')">
                     <i class="fas fa-hard-hat text-yellow-500 text-3xl mb-4"></i>
                     <h3 class="text-xl font-bold mb-2">General Laborer</h3>
                     <p class="text-gray-500">Reliable help for any heavy-duty task.</p>
