--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Pros Cayman | Home Maintenance & Electrical Services</title>
+        <link rel="icon" href="logo.png" type="image/png">
+
     <meta name="description"
         content="Professional home maintenance, electrical solutions, and renovation services in West Bay, George Town, and across the Cayman Islands. Get a free quote today!">
     <meta name="keywords"
@@ -879,8 +881,7 @@
                 <!-- The Merged Before & After Image -->
                 <div
                     class="rounded-xl overflow-hidden border-4 border-brandDark mb-8 bg-gray-50 min-h-[300px] flex items-center justify-center">
-                    <img id="modalImage" src="" alt="Before and After Result" class="w-full h-auto object-cover"
-                        onerror="this.src='https://via.placeholder.com/800x500?text=Service+Image+Path+Not+Found';">
+                    <img id="modalImage" src="" alt="Before and After Result" class="w-full h-auto object-cover">
                 </div>
 
                 <div
