--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
 
                     <p class="text-slate-600 mb-12 leading-relaxed"><br>Home Pros is a dedicated team of professionals
                         based in Grand Cayman, committed to providing top-tier maintenance and electrical solutions. Our
-                        mission is to protect and enhance your most valuable assets—your home and business.</p>
+                        mission is to protect and enhance your most valuable assets—your home and InvestmentProperties.</p>
                     <div class="grid grid-cols-2 gap-8 mb-10">
                         <div>
                             <h4 class="font-bold text-navy uppercase mb-2">Our Mission</h4>
@@ -696,7 +696,7 @@
                         <div>
                             <h4 class="font-bold text-navy uppercase mb-2">Quality First</h4>
                             <p class="text-xs text-gray-500 italic">We use only professional-grade materials and the
-                                latest safety protocols in all electrical work.</p>
+                                latest safety protocols in all Home and Maintenance Services.</p>
                         </div>
                     </div>
                     <a href="#quote"
@@ -1055,11 +1055,18 @@
                             <input type="text" required
                                 class="w-full p-4 bg-slate-100 border-b-2 border-transparent focus:border-brandDark outline-none transition font-bold text-sm">
                         </div>
-                        <div class="space-y-2">
-                            <label class="text-[10px] uppercase font-bold tracking-widest">Phone / Email</label>
-                            <input type="text" required
-                                class="w-full p-4 bg-slate-100 border-b-2 border-transparent focus:border-brandDark outline-none transition font-bold text-sm">
-                        </div>
+                         <div class="space-y-2">
+        <label class="text-[10px] uppercase font-bold tracking-widest">Email Address</label>
+        <input type="email" required
+            placeholder="example@mail.com"
+            class="w-full p-4 bg-slate-100 border-b-2 border-transparent focus:border-brandDark outline-none transition font-bold text-sm">
+                         </div>
+                         <div class="space-y-2">
+        <label class="text-[10px] uppercase font-bold tracking-widest">Phone Number</label>
+        <input type="tel" required
+            placeholder="Your Phone Number"
+            class="w-full p-4 bg-slate-100 border-b-2 border-transparent focus:border-brandDark outline-none transition font-bold text-sm">
+                         </div>
                         <div class="md:col-span-2 space-y-2">
                             <label class="text-[10px] uppercase font-bold tracking-widest">Service Needed</label>
                             <select
@@ -1414,3 +1421,4 @@ window.setFilter = (filter) => {
 </body>
 
 </html>
+
