--- a/index.html
+++ b/index.html
@@ -563,12 +563,12 @@
                     <span class="w-12 h-[2px] bg-white"></span>
                 </div>
                 <h1 class="text-3xl md:text-3xl lg:text-3xl mb-6 leading-[1.1] uppercase font-black tracking-tight">
-                    Your Go-To Experts for <span class="text-brandYellow">Home Projects</span>, Maintenance & Electrical
+                    Your Go-To Experts for <span class="text-brandYellow">Home Projects</span>, Maintenance & Electrical Solutions
                 </h1>
 
                 <p
                     class="text-lg md:text-2xl text-slate-100 mb-10 max-w-2xl font-medium leading-relaxed drop-shadow-md">
-                    Dedicated Property Care, Maintenance, and Professional Electrical work across all Grand Cayman
+                    Dedicated Property Care, Maintenance, Electrical Solutions across all Grand Cayman
                     districts.
                 </p>
                 <div class="flex flex-col sm:flex-row gap-1">
@@ -1414,3 +1414,4 @@ window.setFilter = (filter) => {
 </body>
 
 </html>
+
