--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ĵ<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -1056,10 +1056,18 @@
                                 class="w-full p-4 bg-slate-100 border-b-2 border-transparent focus:border-brandDark outline-none transition font-bold text-sm">
                         </div>
                         <div class="space-y-2">
-                            <label class="text-[10px] uppercase font-bold tracking-widest">Phone / Email</label>
-                            <input type="text" required
-                                class="w-full p-4 bg-slate-100 border-b-2 border-transparent focus:border-brandDark outline-none transition font-bold text-sm">
-                        </div>
+        <label class="text-[10px] uppercase font-bold tracking-widest">Email Address</label>
+        <input type="email" required
+            placeholder="example@mail.com"
+            class="w-full p-4 bg-slate-100 border-b-2 border-transparent focus:border-brandDark outline-none transition font-bold text-sm">
+    </div>
+
+    <div class="space-y-2">
+        <label class="text-[10px] uppercase font-bold tracking-widest">Phone Number</label>
+        <input type="tel" required
+            placeholder="+1 (555) 000-0000"
+            class="w-full p-4 bg-slate-100 border-b-2 border-transparent focus:border-brandDark outline-none transition font-bold text-sm">
+    </div>
                         <div class="md:col-span-2 space-y-2">
                             <label class="text-[10px] uppercase font-bold tracking-widest">Service Needed</label>
                             <select
@@ -1414,4 +1422,5 @@ window.setFilter = (filter) => {
 </body>
 
 </html>
+
 
