--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-ĵ<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -1422,5 +1422,6 @@ window.setFilter = (filter) => {
 </body>
 
 </html>
+
 
 
