--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Pros Cayman | Home Maintenance & Electrical Services</title>
         <link rel="icon" href="logo.png" type="image/png">
+<link rel="shortcut icon" href="logo.png" type="image/png">
+
 
     <meta name="description"
         content="Professional home maintenance, electrical solutions, and renovation services in West Bay, George Town, and across the Cayman Islands. Get a free quote today!">
@@ -1422,6 +1424,7 @@ window.setFilter = (filter) => {
 </body>
 
 </html>
+
 
 
 
