--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Pros Cayman | Home Maintenance & Electrical Services</title>
-        <link rel="icon" href="logo.png" type="image/png">
-<link rel="shortcut icon" href="logo.png" type="image/png">
+        <link rel="icon" href="tlogo.png" type="image/png" sizes="32x32">
+<link rel="apple-touch-icon" href="tlogo.png">
+<link rel="shortcut icon" href="tlogo.png">
 
 
     <meta name="description"
@@ -1424,6 +1425,7 @@ window.setFilter = (filter) => {
 </body>
 
 </html>
+
 
 
 
