--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         body {
             overflow-x: hidden;
             font-family: 'Open Sans', sans-serif;
+            max-width: 100%;
         }
 
         h1,
@@ -161,7 +162,11 @@
             border-color: #007BFF;
             ;
         }
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
         /* NEW PROFESSIONAL MOBILE MENU STYLES */
         #mobile-sidebar {
             transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
@@ -1425,6 +1430,7 @@ window.setFilter = (filter) => {
 </body>
 
 </html>
+
 
 
 
