--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             overflow-x: hidden;
             font-family: 'Open Sans', sans-serif;
             max-width: 100%;
+            overflow-x: hidden; /* Prevents horizontal scrolling */
         }
 
         h1,
