--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Pros Cayman | Home Maintenance & Electrical Services</title>
-        <link rel="icon" href="tlogo.png" type="image/png" sizes="32x32">
-<link rel="apple-touch-icon" href="tlogo.png">
-<link rel="shortcut icon" href="tlogo.png">
+    <link rel="icon" type="png" href="favicon.png" sizes="32x32">
+    <link rel="apple-touch-icon" href="favicon.png">
 
 
     <meta name="description"
