--- a/gallery.html
+++ b/gallery.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard | Project Gallery</title>
-    <link rel="icon" href="logo.png" type="image/png">
-    <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
+    <link rel="apple-touch-icon" href="favicon.png">    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         body {
@@ -60,7 +60,7 @@
             <button class="filter-btn px-5 py-2 rounded-full border border-slate-300 text-sm font-medium transition-all hover:border-slate-900" onclick="window.setFilter('Remodel')">Remodel</button>
         </div>
     </div>
-
+<br><br>
     <main class="max-w-6xl mx-auto px-6 pb-20">
         <!-- Error Banner -->
         <div id="authErrorBanner" class="hidden bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded-xl mb-6 flex items-center gap-3">
