--- a/index.html
+++ b/index.html
@@ -1223,7 +1223,10 @@ input:hover, select:hover, textarea:hover {
                     <option value="General Inquiry">General Inquiry</option>
                     <option value="Plumbing">Plumbing</option>
                     <option value="Electrical">Electrical</option>
+                    <option value="Maintenance">Property Maintenance</option>
+                    <option value="Maintenance">Home Projects</option>
                     <option value="Maintenance">Maintenance</option>
+                    <option value="Maintenance">Construction</option>
                 </select>
             </div>
 
