--- a/index.html
+++ b/index.html
@@ -1255,9 +1255,11 @@ input:hover, select:hover, textarea:hover {
                     <a href="https://www.instagram.com/homeproscayman?igsh=enNncDd5MWllam41&utm_source=qr"
                         class="w-8 h-8 rounded-full border border-brandDark flex items-center justify-center text-brandYellow hover:bg-brandYellow hover:text-navy transition"><i
                             class="fab fa-instagram text-xs"></i></a>
-                    <a href="https://www.instagram.com/homeproscayman?igsh=enNncDd5MWllam41&utm_source=qr"
-                        class="w-8 h-8 rounded-full border border-brandDark flex items-center justify-center text-brandYellow hover:bg-brandYellow hover:text-navy transition"><i
-                            class="fab fa-whatsapp text-xs"></i></a>
+                    <a href="https://wa.me/+1(786)727-1557" 
+   target="_blank"
+   class="w-8 h-8 rounded-full border border-brandDark flex items-center justify-center text-brandYellow hover:bg-brandYellow hover:text-navy transition">
+   <i class="fab fa-whatsapp text-xs"></i>
+</a>
                 </div>
             </div>
             <div>
