--- a/index.html
+++ b/index.html
@@ -1191,7 +1191,7 @@ input:hover, select:hover, textarea:hover {
                 <i class="fas fa-clock"></i>
                 <div>
                     <span>BUSINESS HOURS</span>
-                    <strong>Mon - Sat: 8:00 AM - 6:00 PM</strong>
+                    <strong>Sunday-Friday: 8:00 AM - 7:00 PM</strong>
                 </div>
             </div>
         </div>
@@ -1255,7 +1255,7 @@ input:hover, select:hover, textarea:hover {
                     <a href="https://www.instagram.com/homeproscayman?igsh=enNncDd5MWllam41&utm_source=qr"
                         class="w-8 h-8 rounded-full border border-brandDark flex items-center justify-center text-brandYellow hover:bg-brandYellow hover:text-navy transition"><i
                             class="fab fa-instagram text-xs"></i></a>
-                    <a href="https://wa.me/+1(786)727-1557" 
+                    <a href="https://wa.me/17867271557" 
    target="_blank"
    class="w-8 h-8 rounded-full border border-brandDark flex items-center justify-center text-brandYellow hover:bg-brandYellow hover:text-navy transition">
    <i class="fab fa-whatsapp text-xs"></i>
