--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@ input:hover, select:hover, textarea:hover {
                                 <p class="text-[10px] text-white leading-relaxed">CAR DETAILING, CUSTOM PROJECTS, AND
                                     ONE-TIME JOBS IN CAYMAN.</p>
                                 <br> <a href="#quote"
-                                    class="inline-block bg-white text-navy text-[10px] px-4 py-2 rounded font-black uppercase tracking-widest hover:bg-brandBlue transition">Contact
+                                    class="inline-block bg-white text-navy text-[10px] px-4 py-2 rounded font-black uppercase tracking-widest hover:bg-brandBlue hover:text-white transition">Contact
                                     us Now</a>
                             </div>
                         </div>
