--- a/index.html
+++ b/index.html
@@ -858,9 +858,10 @@ input:hover, select:hover, textarea:hover {
     <div id="filterContainer" class="flex gap-4 overflow-x-auto w-full pb-3 mt-4">
     <button class="filter-btn active whitespace-nowrap px-6 py-2 rounded-full border border-slate-300 text-sm font-medium" onclick="window.setFilter('All')">All Projects</button>
     <button class="filter-btn whitespace-nowrap px-6 py-2 rounded-full border border-slate-300 text-sm font-medium" onclick="window.setFilter('Electrical')">Electrical</button>
-    <button class="filter-btn whitespace-nowrap px-6 py-2 rounded-full border border-slate-300 text-sm font-medium" onclick="window.setFilter('Maintenance')">Maintenance</button>
+    <button class="filter-btn whitespace-nowrap px-6 py-2 rounded-full border border-slate-300 text-sm font-medium" onclick="window.setFilter('Maintenance')">Home Maintenance</button>
     <button class="filter-btn whitespace-nowrap px-6 py-2 rounded-full border border-slate-300 text-sm font-medium" onclick="window.setFilter('Plumbing')">Plumbing</button>
     <button class="filter-btn whitespace-nowrap px-6 py-2 rounded-full border border-slate-300 text-sm font-medium" onclick="window.setFilter('Remodel')">Remodel</button>
+    <button class="filter-btn whitespace-nowrap px-6 py-2 rounded-full border border-slate-300 text-sm font-medium" onclick="window.setFilter('Construction')">Construction</button>
 </div>
 </div>
 
@@ -1610,7 +1611,3 @@ window.changeSlide = (projectId, direction) => {
 </body>
 
 </html>
-
-
-
-
