--- a/index.html
+++ b/index.html
@@ -1215,13 +1215,13 @@ input:hover, select:hover, textarea:hover {
 
             <div class="input-group">
                <label>PHONE NUMBER</label>
-                <input type="tel" name="phone" placeholder="+1 (555) 000-0000">
+                <input type="tel" name="phone" placeholder="  +1 (555) 000-0000">
             </div>
 
             <div class="input-group">
                 <label>SERVICE NEEDED</label>
                 <select name="service">
-                    <option value="General Inquiry">General Inquiry</option>
+                    <option value="General Inquiry">&nbsp;&nbsp;General Inquiry</option>
                     <option value="Plumbing">Plumbing</option>
                     <option value="Electrical">Electrical</option>
                     <option value="Maintenance">Property Maintenance</option>
@@ -1235,7 +1235,7 @@ input:hover, select:hover, textarea:hover {
                 <textarea name="message" rows="5"></textarea>
             </div>
 
-            <button type="submit" id="submit-btn" class="block text-center bg-navy text-white font-black py-4 rounded-lg uppercase tracking-widest shadow-lg hover:bg-brandYellow hover:text-navy transition-all">&nbsp;REQUEST FREE ESTIMATE&nbsp;</button>
+            <button type="submit" id="submit-btn" class="block text-center bg-navy text-white font-black py-4 rounded-lg uppercase tracking-widest shadow-lg hover:bg-brandYellow hover:text-navy transition-all">&nbsp;&nbsp;REQUEST FREE ESTIMATE&nbsp;&nbsp;</button>
             <div id="status-message" class="hidden block text-center bg-[green] text-white font-black py-4 rounded-lg uppercase tracking-widest shadow-lg hover:bg-brandYellow hover:text-navy transition-all">REQUEST SENT SUCCESSFULLY!</div>
         </form>
     </div>
