--- a/index.html
+++ b/index.html
@@ -1147,7 +1147,7 @@ input:hover, select:hover, textarea:hover {
         </div>
 
         <div id="reviews-display-grid" class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-7xl mx-auto">
-            <div class="col-span-full text-center text-slate-400 italic">
+            <div class="col-span-full text-center text-white italic">
                 Gathering recent client feedback...
             </div>
         </div>
